Revert "fix: modal version mobile"
This reverts commit 2bc2fbec7ee5eda502b23e7d734aab2bb272d069.

--- a/src/components/Modal/Modal.module.scss
+++ b/src/components/Modal/Modal.module.scss
@@ -2,7 +2,6 @@
 @import '../../styles/vars';
 
 .wrapper {
-    @include flexColCenter;
     background-color: rgb(0, 0, 0, 50%);
     bottom: 0;
     height: 100%;
@@ -15,7 +14,6 @@
     background-color: white;
     bottom: 0;
     height: 375px;
-    padding: 10px;
     position: fixed;
     width: 100%;
     z-index: 100;
@@ -91,12 +89,4 @@
     height: 18px;
     margin-left: 5px;
     width: 18px;
-}
-
-@include desktop {
-    .modal {
-        border-radius: $borderRounded;
-        bottom: 20%;
-        width: 70%;
-    }
 }
